# basketball-ai

./: .gitignore  network-check.sh  pyproject.toml  readme.md
clients/ios/BasketballAIStreamer/: .gitignore  README.md
clients/ios/BasketballAIStreamer/BasketballAIStreamer/: App.swift  CameraManager.swift  ContentView.swift  Info.plist  StreamingService.swift
clients/ios/BasketballAIStreamer/BasketballAIStreamer.xcodeproj/: project.pbxproj
clients/ios/BasketballAIStreamer/BasketballAIStreamer.xcodeproj/project.xcworkspace/xcuserdata/huyz.xcuserdatad/: UserInterfaceState.xcuserstate
clients/ios/BasketballAIStreamer/BasketballAIStreamer/Assets.xcassets/AppIcon.appiconset/: Contents.json
clients/ios/BasketballAIStreamer/Sources/BasketballAIStreamer/: App.swift  AppConfig.swift  CameraManager.swift  ContentView.swift  Info.plist  VideoStreamService.swift  config.template.json
deployment/docker/: docker-compose.yml
deployment/k8s/edge/: hpa-inference-engine-edge.yaml  hpa-rule-validator.yaml  inference-engine-edge-deployment.yaml  keda-scaledobject-inference-engine.yaml  keda-scaledobject-rule-validator.yaml  rule-validator-deployment.yaml  vision-sensor-edge-deployment.yaml  vision-sensor-edge-secret.yaml  vision-sensor-edge-service.yaml
infrastructure/monitoring/: prometheus.yml
infrastructure/timescale-db/: init.sql
services/ai-agent-layer/data-agents/stat-aggregator-sql/: Dockerfile  app.py
services/ai-agent-layer/referee-agents/travel-detector-svc/: Dockerfile  app.py
services/data-sensing-layer/data-preprocessor/: Dockerfile  main.py
services/data-sensing-layer/vision-sensor-edge/: Dockerfile  README.md  build.sh  main.py  pom.xml
services/data-sensing-layer/vision-sensor-edge/src/main/resources/: application.yml
services/edge-computing-layer/inference-engine-edge/: Dockerfile  main.py
services/edge-computing-layer/rule-validator/: Dockerfile  main.py
services/user-interaction-layer/coach-dashboard/: Dockerfile  app.py
services/user-interaction-layer/referee-ui/: Dockerfile  app.py
shared/common/: __init__.py  config.py  kafka_client.py  logging.py  rule_topic.py
(+10 files in other folders)
